--- a/android/build.gradle
+++ b/android/build.gradle
@@ -12,6 +12,8 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.5.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
+    compileSdkVersion 34
+    buildToolsVersion "34.0.0"
 }
 
 rootProject.allprojects {
